// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`append()\` correctly pushes records to legacy platform. 1`] = `
Object {
  "context": "context-1",
  "level": LogLevel {
    "id": "trace",
    "value": 7,
  },
  "message": "message-1",
  "pid": Any<Number>,
  "timestamp": 2012-02-01T11:22:33.044Z,
}
`;

exports[`\`append()\` correctly pushes records to legacy platform. 2`] = `
Object {
  "context": "context-2",
  "level": LogLevel {
    "id": "debug",
    "value": 6,
  },
  "message": "message-2",
  "pid": Any<Number>,
  "timestamp": 2012-02-01T11:22:33.044Z,
}
`;

exports[`\`append()\` correctly pushes records to legacy platform. 3`] = `
Object {
  "context": "context-3.sub-context-3",
  "level": LogLevel {
    "id": "info",
    "value": 5,
  },
  "message": "message-3",
  "pid": Any<Number>,
  "timestamp": 2012-02-01T11:22:33.044Z,
}
`;

exports[`\`append()\` correctly pushes records to legacy platform. 4`] = `
Object {
  "context": "context-4.sub-context-4",
  "level": LogLevel {
    "id": "warn",
    "value": 4,
  },
  "message": "message-4",
  "pid": Any<Number>,
  "timestamp": 2012-02-01T11:22:33.044Z,
}
`;

exports[`\`append()\` correctly pushes records to legacy platform. 5`] = `
Object {
  "context": "context-5",
  "error": [Error: Some Error],
  "level": LogLevel {
    "id": "error",
    "value": 3,
  },
  "message": "message-5-with-error",
  "pid": Any<Number>,
  "timestamp": 2012-02-01T11:22:33.044Z,
}
`;

exports[`\`append()\` correctly pushes records to legacy platform. 6`] = `
Object {
  "context": "context-6",
  "level": LogLevel {
    "id": "error",
    "value": 3,
  },
  "message": "message-6-with-message",
  "pid": Any<Number>,
  "timestamp": 2012-02-01T11:22:33.044Z,
}
`;

exports[`\`append()\` correctly pushes records to legacy platform. 7`] = `
Object {
  "context": "context-7.sub-context-7.sub-sub-context-7",
  "error": [Error: Some Fatal Error],
  "level": LogLevel {
    "id": "fatal",
    "value": 2,
  },
  "message": "message-7-with-error",
  "pid": Any<Number>,
  "timestamp": 2012-02-01T11:22:33.044Z,
}
`;

exports[`\`append()\` correctly pushes records to legacy platform. 8`] = `
Object {
  "context": "context-8.sub-context-8.sub-sub-context-8",
  "level": LogLevel {
    "id": "fatal",
    "value": 2,
  },
  "message": "message-8-with-message",
  "pid": Any<Number>,
  "timestamp": 2012-02-01T11:22:33.044Z,
}
`;

exports[`\`append()\` correctly pushes records to legacy platform. 9`] = `
Object {
  "context": "context-9.sub-context-9",
  "level": LogLevel {
    "id": "info",
    "value": 5,
  },
  "message": "message-9-with-message",
  "meta": Object {
    "someValue": 3,
  },
  "pid": Any<Number>,
  "timestamp": 2012-02-01T11:22:33.044Z,
}
`;

exports[`\`append()\` correctly pushes records to legacy platform. 10`] = `
Object {
  "context": "context-10.sub-context-10",
  "level": LogLevel {
    "id": "info",
    "value": 5,
  },
  "message": "message-10-with-message",
  "meta": Object {
    "tags": Array [
      "tag1",
      "tag2",
    ],
  },
  "pid": Any<Number>,
  "timestamp": 2012-02-01T11:22:33.044Z,
}
`;
